--- a/themes/hugo-creative-theme/layouts/index.html
+++ b/themes/hugo-creative-theme/layouts/index.html
@@ -8,9 +8,9 @@
         {{ partial "nav.html" . }}
 
         {{ partial "hero.html" . }}
-        {{ partial "about.html" . }}
-        {{ partial "services.html" . }}
-        {{ partial "portfolio.html" . }}
+        {{ partial "despre-noi.html" . }}
+        {{ partial "avantaje.html" . }}
+        {{ partial "servicii.html" . }}
         {{ partial "aside.html" . }}
         {{ partial "contact.html" . }}
 
