--- a/themes/hugo-creative-theme/layouts/partials/avantaje.html
+++ b/themes/hugo-creative-theme/layouts/partials/avantaje.html
@@ -1,5 +1,5 @@
 {{ "<!-- SERVICES -->" | safeHTML }}
-<section id="services">
+<section id="avantaje">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -18,6 +18,7 @@
                     <p class="text-muted">{{ .description }}</p>
                 </div>
             </div>
+
             {{ end }}
         </div>
     </div>
