--- a/themes/hugo-creative-theme/layouts/partials/servicii.html
+++ b/themes/hugo-creative-theme/layouts/partials/servicii.html
@@ -1,4 +1,4 @@
-<section class="no-padding" id="portfolio">
+<section class="no-padding" id="servicii">
     <div class="container-fluid">
         <div class="row no-gutter">
             {{ range .Site.Data.projects }}
