--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -21,11 +21,11 @@ hr {
 }
 
 hr.light {
-    border-color: #fff;
+    border-color: #f05f40;
 }
 
 a {
-    color: #f05f40;
+    color: #000000;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -61,7 +61,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #000000;
 }
 
 .bg-dark {
@@ -98,7 +98,7 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #000000;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -116,12 +116,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #000000;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #000000!important;
     background-color: transparent;
 }
 
@@ -162,7 +162,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #000000;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -177,7 +177,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #000000;
     }
 }
 
@@ -186,7 +186,7 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color: #fff;
+    color: #001a54;
     background-image: url(../img/header.jpg);
     background-position: center;
     -webkit-background-size: cover;
@@ -215,9 +215,9 @@ header .header-content .header-content-inner hr {
 
 header .header-content .header-content-inner p {
     margin-bottom: 50px;
-    font-size: 16px;
-    font-weight: 300;
-    color: rgba(255,255,255,.7);
+    font-size: 20px;
+    font-weight: 200;
+    color: rgba(0,0,0,1);
 }
 
 @media(min-width:768px) {
@@ -283,7 +283,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    background: rgba(0,0,0,.8);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -332,7 +332,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #000000;
 }
 
 .no-gutter > [class*=col-] {
@@ -394,9 +394,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #000000;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #000000;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -437,12 +437,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #000000;
+    background-color: #000000;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #000000;
     background-color: #fff;
 }
 
