--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -186,7 +186,7 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color: #001a54;
+    color: #489b3c;
     background-image: url(../img/header.jpg);
     background-position: center;
     -webkit-background-size: cover;
