--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -186,7 +186,7 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color:  #903926;
+    color:  #001fb6;
     background-image: url(../img/header.jpg);
     background-position: center;
     -webkit-background-size: cover;
